Atualiza branding para Veritus Cred e configura superusuário

--- a/templates/calculo.html
+++ b/templates/calculo.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Solicitar Cálculo - Revisão Segura{% endblock %}
+{% block title %}Solicitar Cálculo - Veritus Cred{% endblock %}
 
 {% block content %}
 <!-- Seção Hero com Banner -->
