--- a/templates/contato.html
+++ b/templates/contato.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Contato - Revisão Segura{% endblock %}
+{% block title %}Contato - Veritus Cred{% endblock %}
 
 {% block content %}
 <!-- Seção Hero com Banner -->
@@ -30,7 +30,7 @@
         <div class="col-md-5">
             <div class="bg-light p-4 rounded shadow">
                 <h4 class="text-dark fw-bold">Informações de Contato</h4>
-                <p><i class="fas fa-envelope text-success"></i> <strong>Email:</strong> contato@revisaosegura.com.br</p>
+                  <p><i class="fas fa-envelope text-success"></i> <strong>Email:</strong> contato@verituscred.com.br</p>
                 <p><i class="fas fa-phone text-success"></i> <strong>Telefone:</strong> (11) 91471-9390</p>
                 <p>Nosso atendimento funciona de segunda a sexta, das 08h às 18h.</p>
                 <img src="/static/images/contact.jpg" alt="Contato" class="img-fluid rounded mt-3">
