--- a/templates/simule.html
+++ b/templates/simule.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Simular Empréstimo - Revisão Segura{% endblock %}
+{% block title %}Simular Empréstimo - Veritus Cred{% endblock %}
 
 {% block content %}
 <!-- Seção Hero -->
