--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Página Inicial - Revisão Segura{% endblock %}
+{% block title %}Página Inicial - Veritus Cred{% endblock %}
 
 {% block content %}
 <div class="container mt-5 text-center">
