--- a/templates/contato.html
+++ b/templates/contato.html
@@ -30,8 +30,8 @@
         <div class="col-md-5">
             <div class="bg-light p-4 rounded shadow">
                 <h4 class="text-dark fw-bold">Informações de Contato</h4>
-                  <p><i class="fas fa-envelope text-success"></i> <strong>Email:</strong> contato@verituscred.com.br</p>
-                <p><i class="fas fa-phone text-success"></i> <strong>Telefone:</strong> (11) 91471-9390</p>
+                <p><i class="fas fa-envelope text-success"></i> <strong>Email:</strong> <a href="mailto:contato@verituscred.com.br" class="text-dark">contato@verituscred.com.br</a></p>
+                <p><i class="fas fa-phone text-success"></i> <strong>Telefone:</strong> <a href="tel:11921271104" class="text-dark">(11) 92127-1104</a></p>
                 <p>Nosso atendimento funciona de segunda a sexta, das 08h às 18h.</p>
                 <img src="/static/images/contact.jpg" alt="Contato" class="img-fluid rounded mt-3">
             </div>
@@ -50,10 +50,10 @@
                     <div class="mb-3">
                         <label for="email" class="form-label"><i class="fas fa-envelope text-success"></i> E-mail:</label>
                         <input type="email" class="form-control" id="email" name="email" placeholder="seuemail@email.com" required>
-<div class="mb-3">
                     </div>
-                        <label for="nome" class="form-label"><i class="fas fa-user text-success"></i> Celular:</label>
-<input type="number" class="form-control" id="number" name="Celular" placeholder="(000) 90000-0000" required>
+                    <div class="mb-3">
+                        <label for="celular" class="form-label"><i class="fas fa-phone text-success"></i> Celular:</label>
+                        <input type="tel" class="form-control" id="celular" name="Celular" placeholder="(11) 90000-0000" required>
                     </div>
                     <div class="mb-3">
                         <label for="mensagem" class="form-label"><i class="fas fa-comment text-success"></i> Mensagem:</label>
