--- a/templates/boletos/listar_boletos.html
+++ b/templates/boletos/listar_boletos.html
@@ -39,10 +39,10 @@
                             {% endif %}
                         </td>
                         <td class="d-flex gap-2">
-                            <a href="{% url 'detalhar_boleto' boleto.id %}" class="btn btn-outline-primary btn-sm">
+                            <a href="{% url 'detalhar_boleto' boleto.id %}" class="btn-modern btn-sm">
                                 <i class="fas fa-eye"></i> Ver
                             </a>
-                            <a href="{{ boleto.arquivo.url }}" class="btn btn-success btn-sm" target="_blank">
+                            <a href="{{ boleto.arquivo.url }}" class="btn-modern btn-sm" target="_blank">
                                 <i class="fas fa-download"></i> Baixar
                             </a>
                         </td>
@@ -59,7 +59,7 @@
 
     <!-- Botão de Voltar ao Dashboard -->
     <div class="text-center mt-4">
-        <a href="{% url 'dashboard' %}" class="btn btn-secondary">
+        <a href="{% url 'dashboard' %}" class="btn-modern">
             <i class="fas fa-arrow-left"></i> Voltar ao Início
         </a>
     </div>
