--- a/templates/simule.html
+++ b/templates/simule.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <!-- Seção Hero -->
-<div class="hero bg-dark text-white text-center py-5" style="background: url('/static/images/simule.jpg') center/cover no-repeat; height: 300px; display: flex; align-items: center; justify-content: center;">
+<div class="hero" style="background-image: url('/static/images/simule.jpg');">
     <h1 class="fw-bold text-shadow">Simule seu Empréstimo</h1>
 </div>
 
@@ -78,7 +78,7 @@
     			<input type="text" name="renda_mensal" class="form-control" placeholder="Ex: 5.000,00" required>
 		    </div>
 
-                    <button type="submit" class="btn btn-success btn-lg w-100 fw-bold">
+                    <button type="submit" class="btn-modern btn-lg w-100 fw-bold">
                         <i class="bi bi-calculator-fill"></i> Simular Empréstimo
                     </button>
                 </form>
