--- a/templates/usuarios/editar_perfil.html
+++ b/templates/usuarios/editar_perfil.html
@@ -52,15 +52,15 @@
             </div>
 
             <!-- Botão Salvar -->
-            <button type="submit" class="btn btn-success w-100 shadow-sm">
+            <button type="submit" class="btn-modern w-100 shadow-sm">
                 <i class="fas fa-save"></i> Salvar Alterações
             </button>
         </form>
 
         <!-- Links de Navegação -->
         <div class="text-center mt-4">
-            <a href="{% url 'perfil' %}" class="btn btn-outline-primary"><i class="fas fa-user"></i> Voltar para o Perfil</a>
-            <a href="{% url 'dashboard' %}" class="btn btn-outline-dark"><i class="fas fa-home"></i> Voltar para o Início</a>
+            <a href="{% url 'perfil' %}" class="btn-modern"><i class="fas fa-user"></i> Voltar para o Perfil</a>
+            <a href="{% url 'dashboard' %}" class="btn-modern"><i class="fas fa-home"></i> Voltar para o Início</a>
         </div>
     </div>
 </div>
