--- a/templates/boletos/index.html
+++ b/templates/boletos/index.html
@@ -18,7 +18,7 @@
                 <div class="card-body">
                     <h5 class="fw-bold text-dark"><i class="fas fa-file-invoice-dollar fa-2x text-primary mb-3"></i><br>Meus Boletos</h5>
                     <p class="text-muted">Acesse todos os boletos gerados, acompanhe o status e baixe quando necessário.</p>
-                    <a href="{% url 'listar_boletos' %}" class="btn btn-primary w-100">
+                    <a href="{% url 'listar_boletos' %}" class="btn-modern w-100">
                         <i class="fas fa-list"></i> Listar Boletos
                     </a>
                 </div>
@@ -31,7 +31,7 @@
                 <div class="card-body">
                     <h5 class="fw-bold text-dark"><i class="fas fa-plus-circle fa-2x text-success mb-3"></i><br>Gerar Novo Boleto</h5>
                     <p class="text-muted">Crie um novo boleto em poucos cliques e acompanhe os pagamentos facilmente.</p>
-                    <a href="{% url 'gerar_boleto' %}" class="btn btn-success w-100">
+                    <a href="{% url 'gerar_boleto' %}" class="btn-modern w-100">
                         <i class="fas fa-plus"></i> Gerar Boleto
                     </a>
                 </div>
