--- a/templates/usuarios/cadastro.html
+++ b/templates/usuarios/cadastro.html
@@ -20,7 +20,7 @@
                 </div>
             {% endfor %}
 
-            <button type="submit" class="btn btn-success w-100"><i class="fas fa-user-plus"></i> Cadastrar</button>
+            <button type="submit" class="btn-modern w-100"><i class="fas fa-user-plus"></i> Cadastrar</button>
         </form>
 
         <div class="text-center mt-3">
