--- a/templates/usuarios/login.html
+++ b/templates/usuarios/login.html
@@ -25,7 +25,7 @@
                 <input type="password" name="password" class="form-control" id="id_password" placeholder="Digite sua senha" required>
             </div>
 
-            <button type="submit" class="btn btn-success w-100"><i class="fas fa-sign-in-alt"></i> Entrar</button>
+            <button type="submit" class="btn-modern w-100"><i class="fas fa-sign-in-alt"></i> Entrar</button>
         </form>
 
         <div class="text-center mt-3">
