--- a/templates/usuarios/logout.html
+++ b/templates/usuarios/logout.html
@@ -7,7 +7,7 @@
     <div class="card p-4 shadow-lg rounded w-50 text-center">
         <h2 class="fw-bold mb-3">Você saiu da sua conta</h2>
         <p>Se deseja acessar novamente, clique no botão abaixo.</p>
-        <a href="{% url 'login' %}" class="btn btn-primary"><i class="fas fa-sign-in-alt"></i> Fazer login</a>
+        <a href="{% url 'login' %}" class="btn-modern"><i class="fas fa-sign-in-alt"></i> Fazer login</a>
     </div>
 </div>
 {% endblock %}
