--- a/templates/usuarios/reset_password.html
+++ b/templates/usuarios/reset_password.html
@@ -15,7 +15,7 @@
                 {{ form.email }}
             </div>
 
-            <button type="submit" class="btn btn-success w-100"><i class="fas fa-paper-plane"></i> Enviar Link de Redefinição</button>
+            <button type="submit" class="btn-modern w-100"><i class="fas fa-paper-plane"></i> Enviar Link de Redefinição</button>
         </form>
 
         <div class="text-center mt-3">
