--- a/templates/usuarios/reset_password_complete.html
+++ b/templates/usuarios/reset_password_complete.html
@@ -9,7 +9,7 @@
         <p class="text-muted">Agora você pode acessar sua conta com sua nova senha.</p>
 
         <div class="mt-4">
-            <a href="{% url 'login' %}" class="btn btn-success w-100"><i class="fas fa-sign-in-alt"></i> Ir para o Login</a>
+            <a href="{% url 'login' %}" class="btn-modern w-100"><i class="fas fa-sign-in-alt"></i> Ir para o Login</a>
         </div>
     </div>
 </div>
