--- a/templates/usuarios/reset_password_confirm.html
+++ b/templates/usuarios/reset_password_confirm.html
@@ -21,7 +21,7 @@
                 {{ form.new_password2 }}
             </div>
 
-            <button type="submit" class="btn btn-success w-100"><i class="fas fa-sync-alt"></i> Atualizar Senha</button>
+            <button type="submit" class="btn-modern w-100"><i class="fas fa-sync-alt"></i> Atualizar Senha</button>
         </form>
 
         <div class="text-center mt-3">
