--- a/templates/usuarios/reset_password_sent.html
+++ b/templates/usuarios/reset_password_sent.html
@@ -10,7 +10,7 @@
         <p class="text-muted">Se não encontrar, verifique também a pasta de spam.</p>
 
         <div class="mt-4">
-            <a href="{% url 'login' %}" class="btn btn-success w-100"><i class="fas fa-sign-in-alt"></i> Voltar para o Login</a>
+            <a href="{% url 'login' %}" class="btn-modern w-100"><i class="fas fa-sign-in-alt"></i> Voltar para o Login</a>
         </div>
     </div>
 </div>
